@@ -158,6 +158,7 @@ var
   rlz, grp: String;
   dlt: TPazoDirlistTask;
   l: TLoginTask;
+  fPretimeLookupTask: TPazoPretimeLookupTask;
 
   { Removes the oldest knowledge base entries }
   procedure KbListsCleanUp;
@@ -485,6 +486,13 @@ begin
           begin
             if spamcfg.ReadBool('kb', 'new_rls', True) then
               irc_Addstats(Format('<c7>[<b>NEW</b>]</c> %s %s @ <b>%s</b> (<c7><b>Not found in PreDB</b></c>)', [section, rls, sitename]));
+
+            if config.readInteger('taskpretime', 'readd_attempts', 5) > 0 then
+            begin
+              fPreTimeLookupTask := TPazoPretimeLookupTask.Create(netname, channel, getadminsitename, p, 1);
+              fPreTimeLookupTask.startat := IncSecond(Now, config.ReadInteger('taskpretime', 'readd_interval', 3));
+              AddTask(fPreTimeLookupTask);
+            end;
           end;
         end
         else
